# swiss_blade_bot

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: codeql.yml
apps/accounts/: urls.py
apps/accounts/migrations/: 0001_initial.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  develop.py  production.py
