[tool.poetry]
name = "swiss_blade_bot"
version = "0.1.0"
description = "Swiss Blade Bot for Telegram"
authors = ["Reinier Hernández <sasuke.reinier@gmail.com>"]
license = "GNU GPL V3.0"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
black = "^22.10.0"
coverage = "^6.5.0"
Sphinx = "^5.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
